# opengl-study

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  makefile
app/src/: winmain.cpp
inc/: gemath.h  geprofile.h
include/: diblib.h  eventhandler.h  geapiwrapper.h  geevthandler.h  gemouse.h  getypes.h  gewin.h  gewinapiwrapper.h  myres.h  obj.h
include/jpeg/: jconfig.h  jmorecfg.h
lib/: kengine.lib
src/: BPMNParser.java  geapiwrapper.cpp  gemouse.cpp  gewin.cpp  gewinapiwrapper.cpp  winmain.cpp
winres/: myres.rc
